Fix breed name issue The breed name was hovering too high over the breed image. I used grid's "align:end" property to fix this.

--- a/src/style.css
+++ b/src/style.css
@@ -149,6 +149,7 @@ form {
       text-align: center;
       font-weight: bold;
       font-size: 1.25rem;
+      align-self: end;
     }
 
     .breed-image {
